# Drone_Vision_System

./: .dockerignore  .gitignore  PROJECT_ANALYSIS.md  README.md  fix_pytorch.py  main.py  predict_pipeline.py  pyproject.toml  recreate_venv.bat  requirements.txt  run_inference.py  setup.py  train_model.py  train_pipeline.py
Dataset/: data.yaml
Dataset/fire.v1i.coco/: README.roboflow.txt
Dataset/fire.v1i.coco/test/: _annotations.coco.json
Dataset/fire.v1i.coco/train/: _annotations.coco.json
Dataset/fire.v1i.coco/valid/: _annotations.coco.json
Dataset/fire.v2i.coco/: README.dataset.txt  README.roboflow.txt
Dataset/fire.v2i.coco/test/: _annotations.coco.json
Dataset/fire.v2i.coco/train/: _annotations.coco.json
Dataset/fire.v2i.coco/valid/: _annotations.coco.json
Dataset/fire.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
Dataset/fire.yolov8/test/labels/: 0102_jpg.rf.3f0273d0874060edd37526d197ef9b9d.txt  0198_jpg.rf.207736c5178bfdbc6273ba1f8abecad7.txt  1055_jpg.rf.00156aced82a568f81719c87e61c3532.txt  1230_jpg.rf.8eabed9bcbb921b86cf9ceb335dae48c.txt  1296_jpg.rf.544879abb48d9860ddf20ae1dc61cacb.txt  30_jpg.rf.f9f922f3956a88d694637a4e32d45825.txt  32-fire-in-kampong-cham_jpg.rf.27df10b4610462f49784e25b238e6e14.txt  33-750417-chemical-factory-fire_jpg.rf.c2b83fd69947f7a4d7ede430cbc3a19d.txt  891_jpg.rf.c8c32dc9b191396a712496a54e7c9680.txt  931_jpg.rf.21baeea3420a6dc5b02908a823fde3fc.txt  93ec0e86-d250-42f4-abd4-0e6be4bbcfdd-Burningn_Man_7_jpg.rf.f2c3241ebf892955efa03cc265ba5ad3.txt  Img_1135_jpg.rf.4d59d539176e70e7a6757c630521f01a.txt  Img_1136_jpg.rf.477dc227c54ab4c7c01c3a17156edd9d.txt  Img_1150_jpg.rf.d23b3129e20eafbf57fcbf3ac32cc4e8.txt  Img_1155_jpg.rf.5b47ddf82f00f72a992f167fc8274995.txt  Img_1160_jpg.rf.d3a5ea3e805f536305fceb40989d9f49.txt  Img_1167_jpg.rf.e03ae1ffb2e8f88865b4122242533d69.txt  Img_1180_jpg.rf.9495f0ea796c6225540474bb1e800abd.txt  Img_1182_jpg.rf.078055c608f2562f9ccef7cb5bbe80cd.txt  Img_1197_jpg.rf.2368e016c604287c339d8ccf609127da.txt  Img_1206_jpg.rf.f43b3f3079055a0a55e7f9ac487e5f8b.txt  Img_1207_jpg.rf.9b41b0d73ccd237f8286b457aac74a18.txt  Img_1215_jpg.rf.c34f0cf2e6c9a6c626cb6c75fb18e28a.txt  Img_1219_jpg.rf.0e1850de156521a4774fdb2f66c48306.txt  Img_126_jpg.rf.d9716d0e80ea8c37951597f4ed35daf3.txt  Img_1278_jpg.rf.9fc541c6f6cee56008e1c1cec3bebf71.txt  Img_1279_jpg.rf.4af2d5a9ea3a29b32a700e86797eb5e0.txt  Img_1290_jpg.rf.1bc42ec070708a38f15188109b913375.txt  Img_1294_jpg.rf.83a4c979ab81a827f9b6254375256454.txt  Img_1311_jpg.rf.f329259f4dae9696407b677ff2c8f9f7.txt  Img_1312_jpg.rf.56f8cd944aef27c2768900c036240377.txt  Img_1315_jpg.rf.f05015291f4c304f26f35cf3b8b68a78.txt  Img_1317_jpg.rf.12f6ed390af6c26fa2989fdb5cea8843.txt  Img_1317_jpg.rf.c9b352091b20494c4151d9eb1f805b9b.txt  Img_1327_jpg.rf.59d2144f1e555efc17530700593111ac.txt  Img_1330_jpg.rf.eb4dc102a2b9f04d0f46f66d09769806.txt  Img_1344_jpg.rf.799dc6c682512e759f96323112eb229a.txt  Img_1344_jpg.rf.867ddca86c8bc91f469d0adb9769b884.txt  Img_1355_jpg.rf.ab35cba3f9f2ccef93365a6362184411.txt  Img_1373_jpg.rf.22a4fc64cb2e3efcedc68a3b65499e05.txt  (+82 more)
Dataset/fire.yolov8/train/labels/: 0055_jpg.rf.f0c8126b9abc3c71a05a1eccdf8a16ff.txt  0111_jpg.rf.94a73ca083b19b5493fd500d1cbb31af.txt  0111_jpg.rf.c892108094a93b28970ab86fc9713b29.txt  01275d5d68568970_jpg.rf.f51ac1b23d04c66c4538299aa5345576.txt  0128_jpg.rf.db775aae2ce0c244f1a1cd4e1c27c4e8.txt  0132_jpg.rf.e2ef692a50d3ce468bc96b2b2ddc6502.txt  0325403460c2d93c_jpg.rf.5cbd39d864dca8f6abd08f4ca00d6bdd.txt  102-Copy_jpg.rf.effdec370ea6eeaf80ce4ea9769b132a.txt  1026_jpg.rf.52aea7d64552bc4bafa4b7720aa610dd.txt  102_jpg.rf.59c38f1e14ae72322d5ad63d4fb8c262.txt  1032_jpg.rf.99197334819e09a0b026b69fa80db8e6.txt  1034_jpg.rf.871fe569f52f4617d1a0e512637e918c.txt  1054_jpg.rf.99833253fa07993d2468b914c806cccb.txt  (+836 more)
api/: app.py
api/routes/: alerts.py  detection.py  mapping.py
api/schemas/: model.py
configs/: config.yaml  drone_config.yaml  training_config.yaml
deployment/: Dockerfile  docker-compose.yml  nginix.conf  requirements-prod.txt
fire_detection_training/yolov8s_fire/: args.yaml
scripts/: add_negatives.py  download_models.py
src/data_preparation/: data_augmentation.py  download_roboflow.py  preprocessing.py
src/detection/: confidence_filter.py  fire_detector.py  size_classifier.py
src/drone/: camera_interface.py  drone_controller.py  telemetry.py
src/geolocation/: coordinate_mapper.py  gps_handler.py  map_api_integration.py
src/realtime/: enhanced_realtime_detector.py  frame_processor.py  realtime_detector.py  video_stream.py
src/training/: hyperparameter_tuning.py  train.py  validate.py
src/utils/: alert_system.py  logger.py  metrics.py  pytorch_compat.py  visualization.py
(+250 files in other folders)
