[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-fire-detection-system"
version = "2.0.0"
description = "End-to-end fire detection system for drones using YOLOv8 with real-time detection, training pipelines, and hybrid detection methods"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Atharva Bhawsar", email = "athrv@example.com"}
]
maintainers = [
    {name = "Atharva Bhawsar", email = "athrv@example.com"}
]
keywords = [
    "fire-detection",
    "drone",
    "yolov8",
    "computer-vision",
    "deep-learning",
    "object-detection",
    "pytorch",
    "ultralytics",
    "real-time-detection",
    "aerial-surveillance"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = [
    # Core AI/ML
    "ultralytics>=8.0.230,<9.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "huggingface-hub>=0.19.0",
    
    # Computer Vision
    "opencv-python>=4.8.0,<5.0.0",
    "opencv-contrib-python>=4.8.0,<5.0.0",
    "numpy>=1.24.0,<2.0.0",
    "Pillow>=10.0.0",
    
    # Data handling
    "roboflow>=1.1.0",
    
    # Geolocation
    "geopy>=2.4.0",
    "folium>=0.15.0",
    "requests>=2.31.0",
    
    # Data processing
    "pandas>=2.1.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    
    # API
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    
    # Visualization & Monitoring
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tensorboard>=2.15.0",
    "mlflow>=2.9.0",
    
    # Database
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    
    # Drone control
    "pymavlink>=2.4.0",
    "dronekit>=2.9.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

gpu = [
    "torch>=2.0.0+cu118",
    "torchvision>=0.15.0+cu118",
]

all = [
    "drone-fire-detection-system[dev,test,docs]",
]

[project.urls]
Homepage = "https://github.com/bhawsarathrva/Drone_Vision_System"
Documentation = "https://github.com/bhawsarathrva/Drone_Vision_System/blob/main/README.md"
Repository = "https://github.com/bhawsarathrva/Drone_Vision_System"
Issues = "https://github.com/bhawsarathrva/Drone_Vision_System/issues"
Changelog = "https://github.com/bhawsarathrva/Drone_Vision_System/releases"

[project.scripts]
fire-train = "train_pipeline:main"
fire-predict = "predict_pipeline:main"
fire-detect = "main:main"

[tool.setuptools]
packages = ["src", "api", "scripts"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
  | \.eggs
  | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src", "api"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
